--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					<p>90% Vanilla &nbsp;&bull;&nbsp; 10% Addition element</p>
 					<nav>
 						<ul>
-							<li><a href="#" class="icon brands fa-discord"><span class="label">Discord(Official)</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github(Website Src)</span></a></li>
+							<li><a href="https://discord.gg/jyexUXsrvn" class="icon brands fa-discord"><span class="label">Discord(Official)</span></a></li>
+							<li><a href="https://github.com/Akkey735/FlatMC" class="icon brands fa-github"><span class="label">Github(Website Src)</span></a></li>
 						</ul>
 					</nav>
 				</header>
